--- a/ealert/ealert.info.yml
+++ b/ealert/ealert.info.yml
@@ -2,4 +2,6 @@ name: ealert
 type: module
 description: Creating e-alert file for sending email
 core: 8.x
+dependencies:
+  - token:token
 package: Custom
